--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
 			<version>2.8.10</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
